--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/boostrap-reboot.css">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.min.css">
     <title>pulse</title>
 </head>
 
 <body>
-    <div class="promo">
+    <section class="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -57,9 +58,9 @@
             </div>
 
         </div>
-    </div>
+    </section>
     <!--promo-->
-    <div class="advantages">
+    <section class="advantages">
         <div class="container">
             <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="advantages__wrapper">
@@ -102,9 +103,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- /.advantages -->
-    <div class="consultation">
+    <section class="consultation">
         <div class="container">
             <h2 class="title title_left">
                 Получите бесплатную консультацию <br>
@@ -122,8 +123,28 @@
                 <button class="button button_submit">ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ</button>
             </form>
         </div>
-    </div>
+    </section>
     <!-- /.consultation -->
+    <section class="carousel">
+        <div class="container">
+            <div class="carousel__inner">
+                <div>
+                    <img src="img/slider/carousel_1.jpg" alt="pulse-1">
+                </div>
+                <div>
+                    <img src="img/slider/carousel_2.jpg" alt="pulse-2">
+                </div>
+                <div>
+                    <img src="img/slider/carousel_3.jpg" alt="pulse-3">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- /.carousel -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
