--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
                 </div>
 
                 <div class="advantages__item">
-                    <img src="icons/advantages/advantages_heart.png" alt="heart">
+                    <img src="icons/advantages/advantages_heart.png" alt="heart" class="advantages__icon_animated">
                     <div class="advantages__subtitle">
                         Заботимся о здоровье
                     </div>
