--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
         </div>
     </section>
     <!-- /.consultation -->
-    <section class="carousel">
+    <div class="carousel">
         <div class="container">
             <div class="carousel__inner">
                 <div>
@@ -140,7 +140,8 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+
     <!-- /.carousel -->
     <section class="catalog">
         <div class="container">
@@ -660,8 +661,8 @@
     </a>
 
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
